--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -48,6 +48,10 @@ build_script:
   - dir
   - dir SFML-3.0.0
   - rename SFML-3.0.0 SFML
+  - echo "Fixing std::byte -> unsigned char in SFML"
+  - powershell -Command "(Get-Content SFML/include/SFML/System/Utf.inl) -replace 'std::byte', 'unsigned char' | Set-Content SFML/include/SFML/System/Utf.inl"
+  - qmake "DEFINES+=LOGIC_ONLY" game.pro
+  - mingw32-make
   - dir
   - dir SFML
   - dir SFML\include
@@ -84,9 +88,9 @@ build_script:
   # Conquer Chess
   - echo "Building Conquer Chess"
 
-  - echo "Patching SFML to avoid std::byte errors"
-  - powershell -Command "(Get-Content ../SFML/include/SFML/System/Utf.inl).Replace('std::byte', 'unsigned char') | Set-Content ../SFML/include/SFML/System/Utf.inl"
-  - qmake "DEFINES+=LOGIC_ONLY" game.pro
+  -qmake game.pro
+
+  
 
   # No idea what 'mingw32-cd' does ...
   # - mingw32-cd
