--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -57,9 +57,13 @@ build_script:
   - dir SFML\include
   - dir SFML\lib
   # - move SFML-3.0.0 SFML
-  - cd conquer-chess
-  - qmake "DEFINES+=LOGIC_ONLY" game.pro
-  - mingw32-make
+
+ - cd conquer-chess
+ - qmake "DEFINES+=LOGIC_ONLY INCLUDEPATH+=../magic_enum/include INCLUDEPATH+=../chess-library INCLUDEPATH+=../SFGraphing CONFIG+=c++17" game.pro
+ - mingw32-make.exe release
+
+ 
+ 
 
   # - dir
   # magic_enum, download
