--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -11,8 +11,11 @@ install:
   #   https://www.appveyor.com/docs/windows-images-software/,
   #   but it does not exist anymore :-/
   # - set QTDIR=C:\Qt\5.6.3\mingw492_32
-  - set QTDIR=C:\Qt\6.8.1\mingw_64
-  - set PATH=%PATH%;%QTDIR%\bin
+  - set QTDIR=C:\Qt\5.12.12\mingw73_64
+  - set PATH=%QTDIR%\bin;%PATH%
+
+  #- set QTDIR=C:\Qt\6.8.1\mingw_64
+  #- set PATH=%PATH%;%QTDIR%\bin
   # Boost
   - set PATH=%PATH%;C:\Libraries\boost_1_86_0
   # SFML (TODO)
@@ -34,9 +37,9 @@ build_script:
   #- dir C:\cygwin
   #- dir C:\cygwin\bin
   - dir C:\Qt
-  - dir C:\Qt\6.8.1
-  - dir C:\Qt\6.8.1\mingw_64
-  - dir C:\Qt\6.8.1\mingw_64\bin
+  - dir C:\Qt\5.12.12
+  - dir C:\Qt\5.12.12\mingw_64
+  - dir C:\Qt\5.12.12\mingw_64\bin
   - dir C:\Libraries
   - dir C:\Libraries\boost_1_86_0
   # Find out current folder's content
